--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,venv
 
+secrets.json
+
 ### Django ###
 *.log
 *.pot
